Fix assorted docs tweaks

--- a/docs/migrations/1.x-to-2.x.md
+++ b/docs/migrations/1.x-to-2.x.md
@@ -499,11 +499,11 @@ In practice, we hope these are reasonable tradeoffs. Creating thunks inside of `
 Here's what the new callback syntax looks like:
 
 ```ts
-const createSlice = buildCreateSlice({
+const createSliceWithThunks = buildCreateSlice({
   creators: { asyncThunk: asyncThunkCreator },
 })
 
-const todosSlice = createSlice({
+const todosSlice = createSliceWithThunks({
   name: 'todos',
   initialState: {
     loading: false,
